[gd_scene load_steps=4 format=3 uid="uid://deohwpkrbs0j"]

[ext_resource type="Material" uid="uid://cw8kovgeqm575" path="res://Assets/Resource/Shaders/black_white_material.tres" id="1_wi2pk"]
[ext_resource type="Theme" uid="uid://n3ns3n53r5ve" path="res://Assets/Resource/Themes/pixel/pixel_theme.tres" id="2_qg2ck"]
[ext_resource type="Script" path="res://scene/calculator.gd" id="3_di8qy"]

[node name="Calculator" type="Control"]
material = ExtResource("1_wi2pk")
layout_mode = 3
anchors_preset = 0
offset_right = 304.0
offset_bottom = 540.0
mouse_filter = 2
theme = ExtResource("2_qg2ck")
script = ExtResource("3_di8qy")
plus_extra = 1
minus_extra = 5
multiply_extra = 2
divide_extra = 2

[node name="ReferenceRect" type="ReferenceRect" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
border_width = 3.4

[node name="ColorRect" type="ColorRect" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
use_parent_material = true
layout_mode = 0
offset_top = 32.0
offset_right = 304.0
offset_bottom = 120.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
use_parent_material = true
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "2+2="
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "5"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
use_parent_material = true
layout_mode = 0
offset_top = 120.0
offset_right = 304.0
offset_bottom = 500.0
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
columns = 4

[node name="Clear" type="Button" parent="CenterContainer/GridContainer"]
modulate = Color(0.6, 0.6, 0.6, 1)
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "C"

[node name="Bin" type="Button" parent="CenterContainer/GridContainer"]
modulate = Color(0.6, 0.6, 0.6, 1)
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Bin"

[node name="Oct" type="Button" parent="CenterContainer/GridContainer"]
modulate = Color(0.6, 0.6, 0.6, 1)
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Oct"

[node name="Hex" type="Button" parent="CenterContainer/GridContainer"]
modulate = Color(0.6, 0.6, 0.6, 1)
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Hex"

[node name="7" type="Button" parent="CenterContainer/GridContainer"]
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "7"

[node name="8" type="Button" parent="CenterContainer/GridContainer"]
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "8"

[node name="9" type="Button" parent="CenterContainer/GridContainer"]
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "9"

[node name="Divide" type="Button" parent="CenterContainer/GridContainer"]
modulate = Color(0.8, 0.8, 0.8, 1)
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "รท"

[node name="4" type="Button" parent="CenterContainer/GridContainer"]
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "4"

[node name="5" type="Button" parent="CenterContainer/GridContainer"]
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "5"

[node name="6" type="Button" parent="CenterContainer/GridContainer"]
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "6"

[node name="Multiply" type="Button" parent="CenterContainer/GridContainer"]
modulate = Color(0.8, 0.8, 0.8, 1)
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "ร"

[node name="1" type="Button" parent="CenterContainer/GridContainer"]
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "1"

[node name="2" type="Button" parent="CenterContainer/GridContainer"]
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "2"

[node name="3" type="Button" parent="CenterContainer/GridContainer"]
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "3"

[node name="Minus" type="Button" parent="CenterContainer/GridContainer"]
modulate = Color(0.8, 0.8, 0.8, 1)
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "-"

[node name="Dot" type="Button" parent="CenterContainer/GridContainer"]
modulate = Color(0.8, 0.8, 0.8, 1)
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "."

[node name="0" type="Button" parent="CenterContainer/GridContainer"]
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Equal" type="Button" parent="CenterContainer/GridContainer"]
modulate = Color(0.8, 0.8, 0.8, 1)
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "="

[node name="Plus" type="Button" parent="CenterContainer/GridContainer"]
modulate = Color(0.8, 0.8, 0.8, 1)
use_parent_material = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "+"

[connection signal="pressed" from="CenterContainer/GridContainer/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Bin" to="." method="_on_bin_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Oct" to="." method="_on_oct_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Hex" to="." method="_on_hex_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Divide" to="." method="_on_divide_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Multiply" to="." method="_on_multiply_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Dot" to="." method="_on_dot_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Equal" to="." method="_on_equal_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Plus" to="." method="_on_plus_pressed"]
